--- a/.gitignore
+++ b/.gitignore
@@ -137,7 +137,7 @@ captures/
 *.keystore
 
 # Google Services (e.g. APIs or Firebase)
-app/google-services.json
+google-services.json
 
 # Android Patch
 gen-external-apklibs
