--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PETDoc"
         tools:targetApi="31">
+
         <activity
             android:name=".main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- 추가 화면들 -->
+        <!-- AI 관련 -->
+        <activity android:name=".ai.AiCheckActivity" />
+        <activity android:name=".ai.AiAnalyzeActivity" />
+        <activity android:name=".ai.AiSkinAnalyzeActivity" />
+
+        <!-- Eye -->
+        <activity android:name=".eye.EyeCamActivity" />
+        <activity android:name=".eye.EyeResultActivity" />
+
+        <!-- Skin -->
+        <activity android:name=".skin.SkinCamActivity" />
+        <activity android:name=".skin.SkinResultActivity" />
     </application>
 
 </manifest>
