--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,22 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".main.MainActivity"
+            android:name=".login.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".login.LoginActivity" />
+        <activity android:name=".login.NameInputActivity" />
+        <activity android:name=".login.GenderInputActivity" />
+        <activity android:name=".login.WeightInputActivity" />
+        <activity android:name=".login.PhotoInputActivity" />
 
-
-        <!-- Skin -->
-        <activity android:name=".skin.SkinCamActivity" />
-        <activity android:name=".skin.SkinResultActivity" />
+<!--        &lt;!&ndash; Skin &ndash;&gt;-->
+<!--        <activity android:name=".skin.SkinCamActivity" />-->
+<!--        <activity android:name=".skin.SkinResultActivity" />-->
     </application>
 
 </manifest>
