--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -26,10 +31,14 @@
         <activity android:name=".login.GenderInputActivity" />
         <activity android:name=".login.WeightInputActivity" />
         <activity android:name=".login.PhotoInputActivity" />
-
+        <activity android:name=".main.MainActivity" />
 <!--        &lt;!&ndash; Skin &ndash;&gt;-->
 <!--        <activity android:name=".skin.SkinCamActivity" />-->
 <!--        <activity android:name=".skin.SkinResultActivity" />-->
+        <!--구글 로그인 설정 -->
+        <meta-data
+            android:name="com.google.android.gms.auth.api.credentials.CREDENTIAL_PICKER_PRESENT"
+            android:value="true" />
     </application>
 
 </manifest>
