--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".main.MainActivity"
+            android:name=".login.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,7 +32,7 @@
         <activity android:name=".login.WeightInputActivity" />
         <activity android:name=".login.PhotoInputActivity" />
 
-<!--        <activity android:name=".main.MainActivity" />-->
+        <activity android:name=".main.MainActivity" />
 
         <!--유전병 예측-->
         <activity android:name=".genetic.GeneticNoteActivity" />
