캘린더 레이아웃

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".aiCheck.skin.SkinLoadingActivity" />
         <activity android:name=".aiCheck.skin.SkinResultActivity" />
 
+        <activity android:name=".walklog.CalendarActivity" />
 
         <!--구글 로그인 설정 -->
         <meta-data
