--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name=".aiCheck.skin.SkinResultActivity" />
 
         <activity android:name=".walklog.CalendarActivity" />
+        <activity android:name=".walklog.WalkRecordActivity" />
 
         <!--구글 로그인 설정 -->
         <meta-data
